--- a/css/base/layout.css
+++ b/css/base/layout.css
@@ -1,11 +1,31 @@
 .container {
-    
+    padding: 60px 0;
 }
 
 .row {
+    width: 1000px;
+    margin: 0 calc((100% - 1000px) / 2);
     background-color: grey;
 }
 
 .row-short {
+    width: 600px;
     background-color: yellow;
+    margin: 0 calc((100% - 600px) / 2);
+}
+
+@media(max-width:1100px){
+    .row {
+    width: 800px;
+    margin: 0 calc((100% - 800px) / 2);
+    background-color: pink;
+}
+}
+
+@media(max-width:900px){
+    .row {
+    width: 600px;
+    margin: 0 calc((100% - 600px) / 2);
+    background-color: aqua;
+}
 }
