--- a/css/base/layout.css
+++ b/css/base/layout.css
@@ -3,6 +3,7 @@
 }
 
 .row {
+    display: inline-block;
     width: 1000px;
     margin: 0 calc((100% - 1000px) / 2);
 }
@@ -10,6 +11,17 @@
 .row-short {
     width: 600px;
     margin: 0 calc((100% - 600px) / 2);
+}
+
+.column {
+    width: 50%;
+    background-color: pink;
+    float: left;
+}
+
+.column-right {
+    width: 40%;
+    margin-left: 10%;
 }
 
 @media(max-width:1100px){
@@ -24,6 +36,13 @@
     width: 600px;
     margin: 0 calc((100% - 600px) / 2);
 }
+
+    .column {
+    width: 100%;
+    margin: 0;
+
+}
+
 }
 
 @media(max-width:700px){
