--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -9,3 +9,34 @@
 
 /*CUSTOM CSS*/
 
+.hero {
+    background-image: url(../../img/bg-img.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.hero > .row-short {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
+.logo {
+    height: 40px;
+    object-fit: contain;
+}
+
+.main-title {
+    font-size: 45px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 800;
+    letter-spacing: -3px;
+}
+
+.main-description {
+    text-align: center;
+    font-size: 20px;
+    color: #BBB7C5;
+}
