--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -10,6 +10,7 @@
 /*CUSTOM CSS*/
 
 .hero {
+    min-height: 90vh;
     background-image: url(../../img/bg-img.png);
     background-repeat: no-repeat;
     background-position: center;
