--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -12,8 +12,10 @@
 .hero {
     min-height: 90vh;
     background-image: url(../../img/bg-img.png);
+    background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    background-attachment: fixed;
 }
 
 .hero > .row-short {
