--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -41,3 +41,24 @@
     text-align: center;
     font-size: 20px;
 }
+
+.column-title {
+    text-transform: uppercase;
+    font-size: 20px;
+}
+
+.column-description {
+    font-size: 17px;
+    line-height: 1.6em;
+    color: #777;
+}
+
+.column-description > a {
+    /* color: var(--secondary-color); */
+    color: red;
+    text-decoration: none;
+}
+
+.column-description > a:hover {
+    text-decoration: underline;
+}
