--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -4,6 +4,8 @@
 
 /*vendor*/
 
+@import '../vendor/font-awesome.min.css';
+
 /*components*/
 @import '../components/button.css';
 
@@ -40,4 +42,34 @@
 .main-description {
     text-align: center;
     font-size: 20px;
+}
+
+footer.container {
+    padding-top: 0;
+}
+
+.socials {
+    display: flex;
+    justify-content: center;
+    padding: 0.5em 0;
+    font-size: 20px;
+    gap: 0.5em;
+    border-bottom: 1px solid #fff;
+}
+
+.socials > a {
+    height: 2.4em;
+    width: 2.4em;
+    line-height: 2.4em;
+    text-align: center;
+    color: #fff;
+    text-decoration: none;
+}
+
+.socials > a:hover {
+    border-radius: 50%;
+    background-color: #fff;
+    text-decoration: none;
+    color: #03A9F3;
+
 }
