--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -64,12 +64,12 @@ footer.container {
     text-align: center;
     color: #fff;
     text-decoration: none;
+    border-radius: 50%;
+    transition: all 0.3s;
 }
 
 .socials > a:hover {
-    border-radius: 50%;
     background-color: #fff;
     text-decoration: none;
     color: #03A9F3;
-
 }
