Flex, clock, styles

--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -1,13 +1,16 @@
-/*base*/
+/*base*/ /*logine tvarka*/
 @import '../base/base.css';
 @import '../base/layout.css';
 
 /*vendor*/
 
 @import '../vendor/font-awesome.min.css';
+@import '../vendor/roboto.css';
 
 /*components*/
 @import '../components/button.css';
+@import '../components/clock.css';
+
 
 /*CUSTOM CSS*/
 
