--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -10,6 +10,7 @@
 /*components*/
 @import '../components/button.css';
 @import '../components/clock.css';
+@import '../components/progress-bar.css';
 
 
 /*CUSTOM CSS*/
