Base footer styles

--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -31,6 +31,7 @@
     display: flex;
     flex-direction: column;
     gap: 25px;
+    align-items: center;
 }
 
 .logo {
@@ -100,4 +101,36 @@ footer.container {
     background-color: #fff;
     text-decoration: none;
     color: #03A9F3;
+}
+
+.logo-white {
+    margin: 40px 0;
+}
+
+.text-trio {
+    text-align: center;
+    color: white;
+    color: rgb(255, 255, 255, 0.6);
+}
+
+.text-trio > span{
+
+}
+
+.text-trio > span > a {
+
+}
+
+.footer-bottom {
+    text-align: center;
+    color: white;
+}
+
+footer a {
+    color: white;
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
 }
